<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobiGED</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="kikou">kikou!!!!</string>
    <string name="button1">Click me!!</string>
    <string name="email">Email :</string>
    <string name="mpd">Mot de passe :</string>
    <string name="connexion">Connexion</string>
    <string name="pas_inscrit">Pas encore inscrit ?</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="deja_inscrit">Vous êtes déjà inscrit? Connectez vous ici!</string>
    <string name="create_account">Créer un nouveau compte</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="parcourir">Parcourir</string>
    <string name="scan">Scan</string>
    <string name="contacts">Contacts</string>
    <string name="dashboard">Dashboard</string>
    <string name="actu">Actualité</string>
    <string name="recherche">Recherche</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rechercher">Rechercher un document :</string>
    <string name="ok">OK</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <!-- Description fonction -->
    <string name="des_search">Rechercher un document :</string>
    <string name="des_scan">Rechercher un document :</string>
    <string name="des_new">Rechercher un document :</string>
    <string name="des_contact">Rechercher un document :</string>
    <string name="des_file">Rechercher un document :</string>
    <string name="des_setting">Rechercher un document :</string>

    <string-array name="filter">
        <item>Tous</item>
        <item>Titre</item>
        <item>Auteur</item>
        <item>Type</item>
        <item>Date</item>
    </string-array>

    <string name="title_activity_home">Home</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string-array name="nav_drawer_items">
        <item>Acceuil</item>
        <item>Rechercher</item>
        <item>Scan</item>
        <item>Actualités</item>
        <item>Contacts</item>
        <item>Parcourir </item>
        <item>Paramètres</item>
        <item>A propos</item>
        <item>Deconnexion</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/cadre_e</item>
        <item>@drawable/bt_main_search</item>
        <item>@drawable/bt_main_scan</item>
        <item>@drawable/bt_main_news</item>
        <item>@drawable/bt_main_contact</item>
        <item>@drawable/bt_main_file</item>
        <item>@drawable/bt_main_setting</item>
        <item>@drawable/bt_main_setting</item>
        <item>@drawable/bt_main_setting</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_camera">Camera</string>

	<!--   DialogBoxes    -->
    <string name="OK">Ok!</string>
    <string name="connectez_vous">Veuillez vous connecter à un compte Google Drive avant de continuer.</string>
    
    
</resources>