<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:background="@android:color/transparent" >

    <ImageView
        android:id="@+id/custom_dialog_img"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/cloud" />

    <TextView
        android:id="@+id/custom_dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/custom_dialog_img"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="55dp"
        android:text="Do you realy want to exit ?"
        android:textColor="@android:color/white"
        android:textSize="13dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/custom_dialog_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="55dp"
        android:layout_below="@id/custom_dialog_title"
        android:text="fjklsdfjlsdjk"
        android:textSize="12dp"
        android:textColor="@android:color/white" />
    
    <Button
        android:id="@+id/custom_dialog_bt_ok"
        android:layout_alignBottom="@id/custom_dialog_img"
        android:layout_width="60dp"
        android:layout_height="37dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/bt_mini_cloud_orange"
        android:textAlignment="gravity"
        android:textSize="12dp"
        android:textColor="#fffff0"
        android:textStyle="bold"
        android:text="@string/ok"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/custom_dialog_bt_yes"
        android:layout_alignBottom="@id/custom_dialog_img"
        android:layout_width="60dp"
        android:layout_height="37dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/bt_mini_cloud_vert"
        android:textAlignment="gravity"
        android:textSize="12dp"
        android:textColor="#fffff0"
        android:textStyle="bold"
        android:text="@string/yes"
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/custom_dialog_bt_no"
        android:layout_alignBottom="@id/custom_dialog_img"
        android:layout_width="60dp"
        android:layout_height="37dp"
        android:layout_marginLeft="250dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@drawable/bt_mini_cloud_rouge"
        android:textAlignment="gravity"
        android:textSize="12dp"
        android:textColor="#fffff0"
        android:textStyle="bold"
        android:text="@string/no"
        android:visibility="invisible"/>
    


</RelativeLayout>